# libcrawl

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/: runner.cpp
src/libcrawl/: defs.h
src/libcrawl/crawler/: crawler.cpp  crawler.h
src/libcrawl/exporter/: csv_graph_exporter.cpp  csv_graph_exporter.h  export_format.h  graph_exporter_factory.h  igraph_exporter.h  json_graph_exporter.cpp  json_graph_exporter.h
src/libcrawl/graph/: crawl_graph.cpp  crawl_graph.h  page_node.h
src/libcrawl/page/: web_page.h
src/libcrawl/processor/: page_link_processor.cpp  page_link_processor.h
test/: CMakeLists.txt  test_crawler.cpp  test_graph.cpp  test_page.cpp  test_page_link_processor.cpp
